--- a/assets/styles.css
+++ b/assets/styles.css
@@ -103,7 +103,8 @@ nav a:hover {
 }
 
 .entry-list .entry-date {
-    width: 140px;
+    width: auto;
+    margin-right: 20px;
     flex-shrink: 0;
     margin-bottom: 0;
 }
